improve website and fix some image overlapping issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -81,7 +81,7 @@ tr,
 p,
 a {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 14px
+  font-size: 14px;
 }
 
 strong {
@@ -101,7 +101,10 @@ papertitle {
 }
 
 name {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  display: block; 
+  text-align: center; 
+  margin-bottom: 0.5rem; 
+  font-family: 'Lato', Verdana, Helvetica, sans-serif; 
   font-size: 32px;
 }
 
